# Investment

./: .flake8  .gitignore  manage.py  pyproject.toml
Investment/: asgi.py  settings.py  urls.py  wsgi.py
stocks/: admin.py  models.py
stocks/management/commands/: get_total_cost.py  get_total_dividend.py  get_total_profit.py  import_dividends.py  import_investments.py
stocks/migrations/: 0001_initial.py
