[tool.poetry]
name = "investment"
version = "0.1.0"
description = ""
authors = ["Sherry Lee <sherrymta520@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
pandas = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
