[tool.poetry]
name = "investment"
version = "0.1.0"
description = ""
authors = ["Sherry Lee <sherrymta520@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
pandas = "^2.3.1"
requests = "^2.32.4"
openpyxl = "^3.1.5"
django-extensions = "^4.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
